Cardview text colors

--- a/app/src/main/res/layout/fragment_create.xml
+++ b/app/src/main/res/layout/fragment_create.xml
@@ -12,6 +12,7 @@
         android:background="@color/banner"
         android:layout_width="match_parent"
         android:gravity="center_vertical"
+        android:paddingStart="20dp"
         android:paddingEnd="20dp"
         android:layout_height="40dp" />
     <TextView
