--- a/app/src/main/res/layout/activity_my_lan_details.xml
+++ b/app/src/main/res/layout/activity_my_lan_details.xml
@@ -185,10 +185,13 @@
             <Button
                 android:id="@+id/button_delete"
                 android:text="DELETE"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentBottom="true"
+                android:layout_width="200dp"
+                android:layout_height="40dp"
+                android:textColor="@android:color/white"
+                android:layout_marginBottom="15dp"
+                android:layout_marginTop="15dp"
+                android:layout_centerHorizontal="true"
+                android:background="@drawable/btn_delete_lan"
                 android:layout_below="@id/linearLayoutList"/>
         </RelativeLayout>
     </ScrollView>
