--- a/app/src/main/res/layout/row_lan.xml
+++ b/app/src/main/res/layout/row_lan.xml
@@ -11,6 +11,7 @@
 
     <RelativeLayout
         android:id="@+id/rl_row_lan"
+        android:background="@android:color/white"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:paddingBottom="5dp"
