--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -51,6 +51,7 @@
             android:layout_marginEnd="20dp"
             android:textSize="16sp"
             android:inputType="text"
+            android:enabled="false"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
@@ -69,6 +70,7 @@
             android:layout_marginStart="20dp"
             android:textSize="16sp"
             android:inputType="text"
+            android:enabled="false"
             android:layout_marginEnd="20dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
@@ -85,6 +87,7 @@
             android:layout_below="@id/email_profile_textview"
             android:inputType="textEmailAddress"
             android:textSize="16sp"
+            android:enabled="false"
             android:layout_marginStart="20dp"
             android:layout_marginEnd="20dp"
             android:layout_width="match_parent"
