--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -17,9 +17,9 @@
 
     <style name="Theme.App.Base" parent="Theme.AppCompat.NoActionBar">
         <item name="colorControlNormal">#c2c5c5c5</item>
-        <item name="colorControlActivated">#96c5c5c5</item>
+        <item name="colorControlActivated">@color/buttonLoginColor</item>
         <item name="colorControlHighlight">#c2c5c5c5</item>
-        <item name="android:editTextColor">#f2ffffff</item>
+        <item name="android:editTextColor">#515151</item>
         <item name="colorAccent">@color/buttonLoginColor</item>
         <item name="android:maxLines">1</item>
     </style>
