--- a/app/src/main/res/layout/fragment_recent.xml
+++ b/app/src/main/res/layout/fragment_recent.xml
@@ -3,6 +3,21 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.example.emile1.findaparty.Activity.fragment.RecentFragment">
+    <ImageView
+        android:contentDescription=""
+        android:id="@+id/amumu_background"
+        android:src="@drawable/amumu_sad"
+        android:scaleType="fitXY"
+        android:layout_gravity="center"
+        android:visibility="invisible"
+        android:layout_width="210dp"
+        android:layout_height="320dp" />
+    <TextView
+        android:id="@+id/no_lan_textview"
+        android:layout_gravity="center"
+        android:layout_marginTop="150dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 
     <!-- TODO: Update blank fragment layout -->
     <ProgressBar
@@ -16,7 +31,6 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recent_recycler_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-    </android.support.v7.widget.RecyclerView>
+        android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>
 
 </FrameLayout>
