--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -16,5 +16,7 @@
     <dimen name="profile_width">75dp</dimen>
     <dimen name="profile_height">75dp</dimen>
 
+    <dimen name="detail_backdrop_height">228dp</dimen>
+
     <dimen name="text_size_edittext_create">18sp</dimen>
 </resources>
