--- a/app/src/main/res/layout/fragment_recent.xml
+++ b/app/src/main/res/layout/fragment_recent.xml
@@ -15,6 +15,8 @@
     <TextView
         android:id="@+id/no_lan_textview"
         android:layout_gravity="center"
+        android:text="@string/message_no_lan"
+        android:visibility="invisible"
         android:layout_marginTop="150dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
@@ -31,6 +33,8 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recent_recycler_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>
+        android:layout_height="match_parent">
+
+    </android.support.v7.widget.RecyclerView>
 
 </FrameLayout>
